--- a/anti_nft_spam_bot/Cargo.toml
+++ b/anti_nft_spam_bot/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 arch_bot_commons = { version = "0.6.5", path = "../arch_bot_commons" }
 chrono = "0.4.34"
 log = "0.4.17"
+notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 reqwest = "0.11.24"
 sqlx = { version = "0.7.3", features = [
 	"sqlite",
