Fix using ImageMagick in CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install ImageMagick
-      run: apt install imagemagick
+      run: sudo apt install imagemagick
     - name: Build
       run: cargo build --verbose
     - name: Run tests
