--- a/teco_tools_bot/Cargo.toml
+++ b/teco_tools_bot/Cargo.toml
@@ -16,4 +16,5 @@ sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
 teloxide = "0.12.0"
 tokio = { version = "1.21.2", features = ["full"] }
 tokio-stream = "0.1.15"
+unicode-segmentation = "1.11.0"
 url = "2.5.0"
