--- a/teco_tools_bot/Cargo.toml
+++ b/teco_tools_bot/Cargo.toml
@@ -16,6 +16,7 @@ serde = "1.0.197"
 serde_json = "1.0.116"
 sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
 teloxide = "0.12.0"
+tempfile = "3.10.1"
 tokio = { version = "1.21.2", features = ["full"] }
 tokio-stream = "0.1.15"
 unicode-segmentation = "1.11.0"
