Anti NFT spam Bot - prevent spammer names from being embedded as links

--- a/anti_nft_spam_bot/Cargo.toml
+++ b/anti_nft_spam_bot/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 arch_bot_commons = { version = "0.6.5", path = "../arch_bot_commons" }
 chrono = "0.4.34"
+html-escape = "0.2.13"
 log = "0.4.17"
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 reqwest = "0.11.24"
