--- a/teco_tools_bot/Cargo.toml
+++ b/teco_tools_bot/Cargo.toml
@@ -12,6 +12,7 @@ html-escape = "0.2.13"
 log = "0.4.17"
 magick_rust = "0.21.0"
 rayon = "1.10.0"
+regex = "1.10.5"
 serde = "1.0.197"
 serde_json = "1.0.116"
 sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
