--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,11 +21,11 @@ jobs:
       run: |
           # Yoinking it from my dependency:
           # https://github.com/nlfiedler/magick-rust/blob/master/.github/workflows/docs.yaml#L24
-          #curl https://imagemagick.org/archive/ImageMagick.tar.gz | tar xz
-          #cd ImageMagick-7.1*
-          #./configure --with-magick-plus-plus=no --with-perl=no 
-          #make -j
-          #sudo make install
+          curl https://imagemagick.org/archive/ImageMagick.tar.gz | tar xz
+          cd ImageMagick-7.1*
+          ./configure --with-magick-plus-plus=no --with-perl=no 
+          make -j
+          sudo make install
           sudo apt update && sudo apt install -y libmagickwand-dev
     - uses: Swatinem/rust-cache@v2
     - name: Build
