--- a/teco_tools_bot/Cargo.toml
+++ b/teco_tools_bot/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 arch_bot_commons = { version = "0.6.5", path = "../arch_bot_commons" }
+chrono = "0.4.38"
 crossbeam-channel = "0.5.12"
 html-escape = "0.2.13"
 log = "0.4.17"
@@ -15,7 +16,7 @@ rayon = "1.10.0"
 regex = "1.10.5"
 serde = "1.0.197"
 serde_json = "1.0.116"
-sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
+sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
 teloxide = "0.12.0"
 tempfile = "3.10.1"
 tokio = { version = "1.21.2", features = ["full"] }
