--- a/anti_nft_spam_bot/Cargo.toml
+++ b/anti_nft_spam_bot/Cargo.toml
@@ -10,6 +10,9 @@ arch_bot_commons = { version = "0.6.5", path = "../arch_bot_commons" }
 chrono = "0.4.34"
 html-escape = "0.2.13"
 log = "0.4.17"
+# This seems to depend on OpenSSL 3.3.0, but Fedora Server 40 only has 3.2.1.
+# Use "vendored" feature to work around that lmao
+native-tls = { version = "0.2.12", features = ["vendored"] }
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 reqwest = "0.11.24"
 sqlx = { version = "0.7.3", features = [
