--- a/teco_tools_bot/Cargo.toml
+++ b/teco_tools_bot/Cargo.toml
@@ -12,6 +12,9 @@ crossbeam-channel = "0.5.12"
 html-escape = "0.2.13"
 log = "0.4.17"
 magick_rust = "0.21.0"
+# This seems to depend on OpenSSL 3.3.0, but Fedora Server 40 only has 3.2.1.
+# Use "vendored" feature to work around that lmao
+native-tls = { version = "0.2.12", features = ["vendored"] }
 rayon = "1.10.0"
 regex = "1.10.5"
 serde = "1.0.197"
