--- a/arch_bot_commons/Cargo.toml
+++ b/arch_bot_commons/Cargo.toml
@@ -10,4 +10,5 @@ futures = "0.3.25"
 log = "0.4.17"
 pretty_env_logger = "0.5.0"
 teloxide = "0.12.0"
+tempfile = "3.13.0"
 tokio = { version = "1.21.2", features = ["full"] }
