--- a/teco_tools_bot/Cargo.toml
+++ b/teco_tools_bot/Cargo.toml
@@ -18,6 +18,7 @@ native-tls = { version = "0.2.12", features = ["vendored"] }
 rand = "0.8.5"
 rayon = "1.10.0"
 regex = "1.10.5"
+reqwest = { version = "0.12.12", features = ["multipart"] }
 serde = "1.0.197"
 serde_json = "1.0.116"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
